// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Single Line List Item matches snapshot w/o a11y violations 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0;
  list-style-type: none;
  width: 100%;
}

.c1:focus {
  outline: dotted 1px rgb(59,153,252);
  outline-offset: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<ul
  className="c0"
>
  <li
    className="c1"
    onKeyUp={[Function]}
    tabIndex={null}
  >
    <div
      className="c2"
    />
    <div
      className=""
    />
  </li>
</ul>
`;

exports[`Single Line List Item passes a child to the correct dom node in the list item 1`] = `
.c3 {
  fill: #ffd960;
  vertical-align: top;
}

.c0 {
  padding: 0;
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0;
  list-style-type: none;
  width: 100%;
}

.c1:focus {
  outline: dotted 1px rgb(59,153,252);
  outline-offset: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<ul
  className="c0"
>
  <li
    className="c1"
    onKeyUp={[Function]}
    tabIndex={null}
  >
    <div
      className="c2"
    />
    <div
      className=""
    >
      <svg
        aria-label="warning"
        className="c3"
        color="#ffd960"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <title>
          warning
        </title>
        <desc>
          triangle with exclamation mark in center
        </desc>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
        />
      </svg>
    </div>
  </li>
</ul>
`;

exports[`Single Line List Item sets a border when bottomBorder prop = true 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0;
  list-style-type: none;
  width: 100%;
  border-bottom: solid 1px #e8e5e2;
}

.c1:focus {
  outline: dotted 1px rgb(59,153,252);
  outline-offset: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<ul
  className="c0"
>
  <li
    className="c1"
    onKeyUp={[Function]}
    tabIndex={null}
  >
    <div
      className="c2"
    />
    <div
      className=""
    />
  </li>
</ul>
`;

exports[`Single Line List Item sets a click handler on the left icon via onLeftIconClick prop 1`] = `
.c5 {
  fill: #ffd960;
  vertical-align: top;
}

.c0 {
  padding: 0;
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0;
  list-style-type: none;
  width: 100%;
}

.c2:focus {
  outline: dotted 1px rgb(59,153,252);
  outline-offset: -1px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c4 {
  padding: 0 16px 0 8px;
}

.c6 {
  padding: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1:hover .dZrptj {
  color: #53a4dc;
}

.c1:focus .dZrptj {
  color: #53a4dc;
}

.c1:hover .dbgMsQ {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:focus .dbgMsQ {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<ul
  className="c0"
>
  <li
    className="c1 c2"
    onKeyUp={[Function]}
    tabIndex={null}
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        onClick={[Function]}
        onKeyUp={[Function]}
        tabIndex="0"
      >
        <svg
          aria-label="warning"
          className="c5"
          color="#ffd960"
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
        >
          <title>
            warning
          </title>
          <desc>
            triangle with exclamation mark in center
          </desc>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div
        className="c6"
      >
        test title
      </div>
    </div>
    <div
      className=""
    />
  </li>
</ul>
`;

exports[`Single Line List Item sets a left icon in the proper dom node when passed as leftIcon prop 1`] = `
.c5 {
  fill: #ffd960;
  vertical-align: top;
}

.c0 {
  padding: 0;
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0;
  list-style-type: none;
  width: 100%;
}

.c2:focus {
  outline: dotted 1px rgb(59,153,252);
  outline-offset: -1px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c4 {
  padding: 0 16px 0 8px;
}

.c6 {
  padding: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1:hover .dZrptj {
  color: #53a4dc;
}

.c1:focus .dZrptj {
  color: #53a4dc;
}

.c1:hover .dbgMsQ {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:focus .dbgMsQ {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<ul
  className="c0"
>
  <li
    className="c1 c2"
    onKeyUp={[Function]}
    tabIndex={null}
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        onKeyUp={[Function]}
        tabIndex={null}
      >
        <svg
          aria-label="warning"
          className="c5"
          color="#ffd960"
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
        >
          <title>
            warning
          </title>
          <desc>
            triangle with exclamation mark in center
          </desc>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div
        className="c6"
      >
        test title
      </div>
    </div>
    <div
      className=""
    />
  </li>
</ul>
`;

exports[`Single Line List Item sets style on the proper dom node when style obj passed via wrapperStyle prop 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0;
  list-style-type: none;
  width: 100%;
}

.c2:focus {
  outline: dotted 1px rgb(59,153,252);
  outline-offset: -1px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1:hover .dZrptj {
  color: #53a4dc;
}

.c1:focus .dZrptj {
  color: #53a4dc;
}

.c1:hover .dbgMsQ {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:focus .dbgMsQ {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<ul
  className="c0"
>
  <li
    className="c1 c2"
    onKeyUp={[Function]}
    style={
      Object {
        "margin": "8px",
      }
    }
    tabIndex={null}
  >
    <div
      className="c3"
    />
    <div
      className=""
    />
  </li>
</ul>
`;

exports[`Single Line List Item sets the proper styles when clickable prop = true 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0;
  list-style-type: none;
  cursor: pointer;
  width: 100%;
}

.c2:focus {
  outline: dotted 1px rgb(59,153,252);
  outline-offset: -1px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c4 {
  color: #0680cd;
  padding: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1:hover .c4 {
  color: #53a4dc;
}

.c1:focus .c4 {
  color: #53a4dc;
}

<ul
  className="c0"
>
  <li
    className="c1 c2"
    onKeyUp={[Function]}
    tabIndex={null}
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        test title
      </div>
    </div>
    <div
      className=""
    />
  </li>
</ul>
`;

exports[`Single Line List Item sets the proper styles when underlineTitleOnHover = true 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0;
  list-style-type: none;
  width: 100%;
}

.c2:focus {
  outline: dotted 1px rgb(59,153,252);
  outline-offset: -1px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1:hover .dZrptj {
  color: #53a4dc;
}

.c1:focus .dZrptj {
  color: #53a4dc;
}

.c4 {
  padding: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1:hover .c4 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:focus .c4 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<ul
  className="c0"
>
  <li
    className="c1 c2"
    onKeyUp={[Function]}
    tabIndex={null}
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        test title
      </div>
    </div>
    <div
      className=""
    />
  </li>
</ul>
`;

exports[`Single Line List Item sets the title on the correct dom node via the title prop 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0;
  list-style-type: none;
  width: 100%;
}

.c1:focus {
  outline: dotted 1px rgb(59,153,252);
  outline-offset: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  padding: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<ul
  className="c0"
>
  <li
    className="c1"
    onKeyUp={[Function]}
    tabIndex={null}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        test title
      </div>
    </div>
    <div
      className=""
    />
  </li>
</ul>
`;
